--- a/wellnesssite/index.html
+++ b/wellnesssite/index.html
@@ -24,7 +24,7 @@
       </nav>
       <div>
         <main> <h2>Practicing Well Being Will Improve Your Life</h2>
-      <p>Wellness is an important aspect of life. You want to go through life
+      <p class="page-one-p">Wellness is an important aspect of life. You want to go through life
           in the highest quality way you can. Picking up practices that will improve
           your well being will improve every aspect of your life and make this wonderful
           journey we call life more enjoyable and higher quality for you. Below are some practices
@@ -33,7 +33,7 @@
       </div>
       <div>
           <h2>Practice Being in the Moment</h2>
-          <p>There is so much to think about in life. What will you do for money, how should you raise your family,
+          <p class="page-one-p">There is so much to think about in life. What will you do for money, how should you raise your family,
               how you are going to spend your time. Life is full of so many decisions it's easy to get caught
               in your thoughts. What life really is though is what you do and how you are in the moment. The moment
               is where all of your reality happens and what effects your future. Practicing bringing
@@ -44,7 +44,7 @@
       </div>
       <div>
           <h2>Meditation is for Everyone</h2>
-          <p>When you think of meditation, you may think of sitting with your legs crossed and chanting
+          <p class="page-one-p">When you think of meditation, you may think of sitting with your legs crossed and chanting
               or breathing deeply and focusing on your breath. You may have already tried meditation and given up quickly
               because you are just too jittery. But meditation is a great tool to slow your mind
               in this fast-paced world we live in. All you really need to do is sit comfortably, close your eyes and breathe.
