--- a/wellnesssite/learn-more-page.html
+++ b/wellnesssite/learn-more-page.html
@@ -41,12 +41,12 @@
             <p class="formbox">Mark all that you are interested in learning about:</p>
             <input type="checkbox" id="meditate" name="meditate" value="meditate">
             <label class ="checkoff"for="meditate">Meditation</label><br>
-            <input type="checkbox" id="terms" name="terms" value="Terms">
-            <label class ="checkoff" for="terms">Awareness</label><br>
-            <input type="checkbox" id="signup" name="signup" value="Signup">
-            <label class ="checkoff" for="signup">Breathing Techniques</label><br>
-            <input type="checkbox" id="terms" name="terms" value="Terms">
-            <label class ="checkoff" for="terms">Positive Thinking</label>
+            <input type="checkbox" id="awareness" name="awareness" value="awareness">
+            <label class ="checkoff" for="awareness">Awareness</label><br>
+            <input type="checkbox" id="breathe" name="breathe" value="breathe">
+            <label class ="checkoff" for="breathe">Breathing Techniques</label><br>
+            <input type="checkbox" id="positive" name="positive" value="positive">
+            <label class ="checkoff" for="positive">Positive Thinking</label>
         </div>
 
         <div>
