--- a/wellnesssite/resources.html
+++ b/wellnesssite/resources.html
@@ -10,16 +10,25 @@
       <h1>Resources</h1>
       </header>
       <nav>
-        <div class="icons" class="iborder"><img src="C:\Users\Admin\Pictures\Yoga Pose 1.png">
+        <div class="icons" class="iborder">
+        <a href="\\wsl$\Ubuntu\home\connor\aa-projects\first-website\wellnesssite\learn-more-page.html">
+         <img src="C:\Users\Admin\Pictures\Yoga Pose 1.png">
+        </a>
       </div>
         <div class="icons2" class="iborder">
-      <img src="C:\Users\Admin\Pictures\Yoga Pose 2.png">
+        <a href="\\wsl$\Ubuntu\home\connor\aa-projects\first-website\wellnesssite\resources.html">
+         <img src="C:\Users\Admin\Pictures\Yoga Pose 2.png">
+        </a>
       </div>
       <div class="icons3" class="iborder">
-  <img src="C:\Users\Admin\Pictures\Yoga Pose 3.png">
+        <a href="\\wsl$\Ubuntu\home\connor\aa-projects\first-website\wellnesssite\index.html">
+         <img src="C:\Users\Admin\Pictures\Yoga Pose 3.png">
+        </a>
       </div>
       <div class="icons4" class="iborder">
-<img src="C:\Users\Admin\Pictures\Yoga Pose 4.png">
+        <a href="\\wsl$\Ubuntu\home\connor\aa-projects\first-website\wellnesssite\examples.html">
+         <img src="C:\Users\Admin\Pictures\Yoga Pose 4.png">
+        </a>
       </div>
       </nav>
       <ul>
